# mcp2cli-rs

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: build.yml
examples/: usage.sh
src/: error.rs  lib.rs  main.rs  output.rs
src/cli/: args.rs
src/mcp/: client.rs  protocol.rs
src/openapi/: executor.rs  mod.rs  spec.rs
